# backend-at-home-lab-4

api/: .env  courses.json  create_table.sql  docker-compose.yml  dockerfile  insert_data.sql  pyproject.toml  readme.md  subject.json  tracks.json
api/api/: database.py  main.py  nosql_database.py  viewmodels.py
api/api/courses/: models.py  repository.py  router.py  schema.py
api/api/subjects/: models.py  repository.py  router.py
api/api/tracks/: models.py  repository.py  router.py  schema.py
